--- a/BikingServerSOAP/Biking/Biking.csproj
+++ b/BikingServerSOAP/Biking/Biking.csproj
@@ -205,7 +205,8 @@
     <Compile Include="geoInfo.cs" />
     <Compile Include="IMyBiking.cs" />
     <Compile Include="JsonClassesAdressToCoord.cs" />
-    <Compile Include="JsonClassesContractStation.cs" />
+    <Compile Include="JsonClassesContract.cs" />
+    <Compile Include="JsonClassesStation.cs" />
     <Compile Include="JsonClassesTrajectory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MyBiking.cs" />
