--- a/BikingServerSOAP/Biking/App.config
+++ b/BikingServerSOAP/Biking/App.config
@@ -1,24 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+	</startup>
 	<appSettings>
 		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-		<add key="ClientSettingsProvider.ServiceUri" value="" />
 	</appSettings>
 	<system.web>
 		<compilation debug="true" />
-		<membership defaultProvider="ClientAuthenticationMembershipProvider">
-			<providers>
-				<add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-			</providers>
-		</membership>
-		<roleManager defaultProvider="ClientRoleProvider" enabled="true">
-			<providers>
-				<add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-			</providers>
-		</roleManager>
 	</system.web>
-	<!-- Lors du déploiement du projet de bibilothèque de services, le contenu du fichier de configuration doit être ajouté au fichier app.config  
-  de l'hôte. System.Configuration ne prend pas en charge les fichiers de configuration des bibliothèques. -->
+	<!-- When deploying the service library project, the content of the config file must be added to the host's 
+  app.config file. System.Configuration does not support config files for libraries. -->
 	<system.serviceModel>
 		<bindings>
 			<basicHttpBinding>
@@ -28,41 +20,9 @@
 		<client>
 			<endpoint address="http://localhost:8733/Design_Time_Addresses/JCDecauxCache/JCDecauxCache/" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICacheJCDecaux" contract="ProxyCache.ICacheJCDecaux" name="BasicHttpBinding_ICacheJCDecaux" />
 		</client>
-		<services>
-			<service name="Biking.MyBiking">
-				<endpoint address="" binding="basicHttpBinding" contract="Biking.IMyBiking">
-					<identity>
-						<dns value="localhost" />
-					</identity>
-				</endpoint>
-				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-				<host>
-					<baseAddresses>
-						<add baseAddress="http://localhost:8733/Design_Time_Addresses/Biking/MyBiking/" />
-					</baseAddresses>
-				</host>
-			</service>
-		</services>
-		<behaviors>
-			<serviceBehaviors>
-				<behavior>
-					<!-- Pour éviter la divulgation d'informations de métadonnées, 
-          définissez les valeurs ci-dessous sur false avant le déploiement -->
-					<serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
-					<!-- Pour recevoir les détails de l'exception dans les erreurs à des fins de débogage, 
-          définissez la valeur ci-dessous sur true.  Pour éviter la divulgation d'informations d'exception, 
-          définissez-la sur false avant le déploiement -->
-					<serviceDebug includeExceptionDetailInFaults="True" />
-				</behavior>
-			</serviceBehaviors>
-		</behaviors>
 	</system.serviceModel>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
-			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
